--- a/index.html
+++ b/index.html
@@ -40,35 +40,38 @@
 
 <body>
 
-  <header id="header" class="header d-flex align-items-center">
-    <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
+<!-- End Header -->
+<header id="header" class="header d-flex align-items-center">
+  <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="./assets/img/sin fondo.png" alt=""> 
-        <!--<h1>UpConstruction<span>.</span></h1>-->
-        <div class="social-icons">
-          <a href="tel:+1234567890" style="color:#B58900"><i class="bi bi-phone-fill" style="color:#B58900"></i> &nbsp; +54 9 11 6891 0045 &nbsp;</a>
-          <a href="mailto:info@example.com" style="color:#B58900"><i class="bi bi-envelope-fill" style="color:#B58900"></i> &nbsp; INFO@PGSGRUP.COM.AR &nbsp;</a>
-          <a href="https://instagram.com/pgs_group_srl___?igshid=NTc4MTIwNjQ2YQ==" style="color:#B58900"><i class="bi bi-instagram" style="color:#B58900"></i></a>
-        </div>
-        
-      </a>
-      <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
-      <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
-      <nav id="navbar" class="navbar">
-        <ul>
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="nosotros.html">Nosotros</a></li>
-          <li><a href="Construcciones.html">Construcciones</a></li>
-          <li><a href="trabajo.html">Trabajos</a></li>
-          <li><a href="clientes.html">clientes</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-      </nav><!-- .navbar -->
+    <a href="index.html" class="logo d-flex align-items-center">
+      <!-- Uncomment the line below if you also wish to use an image logo -->
+      <img src="./assets/img/sin fondo.png" alt=""> 
+      <!--<h1>UpConstruction<span>.</span></h1>-->
+      <div class="social-icons">
+        <a href="tel:+1234567890" style="color:#B58900"><i class="bi bi-phone-fill" style="color:#B58900"></i>+54 9 11 6891 0045&nbsp;</a>
+        <a href="mailto:info@example.com" style="color:#B58900"><i class="bi bi-envelope-fill" style="color:#B58900"></i>&nbsp;INFO@PGSGRUP.COM.AR&nbsp;</a>
+        <a href="https://instagram.com/pgs_group_srl___?igshid=NTc4MTIwNjQ2YQ==" style="color:#B58900"><i class="bi bi-instagram" style="color:#B58900"></i></a>
+      </div>
+    </a>
 
-    </div>
-  </header><!-- End Header -->
+    <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
+    <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
+    
+    <nav id="navbar" class="navbar">
+      <ul>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="nosotros.html">Nosotros</a></li>
+        <li><a href="Construcciones.html">Construcciones</a></li>
+        <li><a href="trabajo.html">Trabajos</a></li>
+        <li><a href="clientes.html">clientes</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+      </ul>
+    </nav><!-- .navbar -->
+
+  </div>
+</header>
+
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="hero">
