--- a/trabajo.html
+++ b/trabajo.html
@@ -47,8 +47,8 @@
       <img src="./assets/img/sin fondo.png" alt=""> 
       <!--<h1>UpConstruction<span>.</span></h1>-->
       <div class="social-icons">
-        <a href="tel:+1234567890" style="color:#B58900"><i class="bi bi-phone-fill" style="color:#B58900"></i> &nbsp; +54 9 11 6891 0045 &nbsp;</a>
-        <a href="mailto:info@example.com" style="color:#B58900"><i class="bi bi-envelope-fill" style="color:#B58900"></i> &nbsp; INFO@PGSGRUP.COM.AR &nbsp;</a>
+        <a href="tel:+1234567890" style="color:#B58900"><i class="bi bi-phone-fill" style="color:#B58900"></i> +54 9 11 6891 0045 </a>
+        <a href="mailto:info@example.com" style="color:#B58900"><i class="bi bi-envelope-fill" style="color:#B58900"></i> INFO@PGSGRUP.COM.AR&nbsp; </a>
         <a href="https://instagram.com/pgs_group_srl___?igshid=NTc4MTIwNjQ2YQ==" style="color:#B58900"><i class="bi bi-instagram" style="color:#B58900"></i></a>
       </div>
     </a>
