--- a/trabajo.html
+++ b/trabajo.html
@@ -5,14 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>PGS GRUP SRL CONTRUCIONES - Trabajo</title>
+  <title>PGS GRUP SRL CONTRUCIONES-Trabajo</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
- <!-- Favicons 
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-  -->
+  <!-- Favicons--> 
+  <link href="../UpConstruction/assets/img/32.png" rel="icon">
+  <link href="../UpConstruction/assets/img/16.png" rel="apple-touch-icon">
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -47,9 +46,10 @@
       <img src="./assets/img/sin fondo.png" alt=""> 
       <!--<h1>UpConstruction<span>.</span></h1>-->
       <div class="social-icons">
-        <a href="tel:+1234567890" style="color:#B58900"><i class="bi bi-phone-fill" style="color:#B58900"></i> +54 9 11 6891 0045 </a>
-        <a href="mailto:info@example.com" style="color:#B58900"><i class="bi bi-envelope-fill" style="color:#B58900"></i> INFO@PGSGRUP.COM.AR&nbsp; </a>
-        <a href="https://instagram.com/pgs_group_srl___?igshid=NTc4MTIwNjQ2YQ==" style="color:#B58900"><i class="bi bi-instagram" style="color:#B58900"></i></a>
+        <a href="https://instagram.com/pgs_group_srl___?igshid=NTc4MTIwNjQ2YQ==" style="color:#FFD800"><i class="bi bi-instagram" style="color:#FFD800"></i>&nbsp;&nbsp;</a>
+        <a href="https://wa.me/1168910045" style="color:#FFD800"><i class="bi bi-whatsapp"></i>&nbsp;&nbsp;</a>
+        <a href="mailto:info@pgsgrup.com.ar?" style="color:#FFD800"><i class="bi bi-envelope-fill" style="color:#FFD800"></i>&nbsp;&nbsp;</a>
+        
       </div>
     </a>
     <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -304,7 +304,7 @@
               <div class="social-links d-flex mt-3">
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-twitter"></i></a>
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a>
-                <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
+                <a href="https://instagram.com/pgs_group_srl___?igshid=NTc4MTIwNjQ2YQ==" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
