--- a/contacto.html
+++ b/contacto.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
  <!-- Favicons--> 
- <link href="../UpConstruction/assets/img/icons8-1-08-ios-16-filled-32.png" rel="icon">
-  <link href="../UpConstruction/assets/img/icons8-1-08-ios-16-filled-16.png" rel="apple-touch-icon">
+ <link href="../UpConstruction/assets/img/32.png" rel="icon">
+ <link href="../UpConstruction/assets/img/16.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -70,7 +70,7 @@
 
     </div>
   </header><!-- End Header -->
-  <main id="main" 
+  <main id="main" >
 
     <!-- ======= Breadcrumbs ======= -->
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/breadcrumbs-bg.jpg');">
@@ -92,9 +92,10 @@
         <div class="row gy-4">
           <div class="col-lg-6">
             <div class="info-item  d-flex flex-column justify-content-center align-items-center">
-              <i class="bi bi-map"></i>
+              <i class="bi bi-map direcion"></i>
               <h3>PGS GRUP SRL CONTRUCIONES</h3>
-              <p><strong>M. Silva 4385, Villa Ballester. Provincia de Buenos Aires</strong></p>
+              <p><strong>M. Silva 4385, Villa Ballester.<br>
+                Provincia de Buenos Aires.</strong></p>
 
             </div>
           </div><!-- End Info Item -->
@@ -216,8 +217,8 @@
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/upconstruction-bootstrap-construction-website-template/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a
-            href="https://themewagon.com">ThemeWagon</a>
+         <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a
+            href="https://themewagon.com">ThemeWagon</a>-->
         </div>
       </div>
     </div>
