--- a/nosotros.html
+++ b/nosotros.html
@@ -10,8 +10,9 @@
   <meta content="" name="keywords">
 
   <!-- Favicons--> 
-  <link href="../UpConstruction/assets/img/icons8-1-08-ios-16-filled-32.png" rel="icon">
-  <link href="../UpConstruction/assets/img/icons8-1-08-ios-16-filled-16.png" rel="apple-touch-icon">
+  <link href="../UpConstruction/assets/img/32.png" rel="icon">
+  <link href="../UpConstruction/assets/img/16.png" rel="apple-touch-icon">
+
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -78,7 +79,7 @@
         <h2>Nosotros</h2>
         <ol>
           <li><a href="index.html">Home</a></li>
-          <li>Nsotros</li>
+          <li>Nosotros</li>
         </ol>
 
       </div>
@@ -179,8 +180,8 @@
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/upconstruction-bootstrap-construction-website-template/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a
-            href="https://themewagon.com">ThemeWagon</a>
+        <!--  Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a
+            href="https://themewagon.com">ThemeWagon</a>-->
         </div>
       </div>
     </div>
